--- a/UI final/index.html
+++ b/UI final/index.html
@@ -82,8 +82,14 @@
 			  <h1 data-aos="fade-up" data-aos-delay="100">EMOJ-I-ON</h1>
 			 <h2 data-aos="fade-up" data-aos-delay="100">The Magical Wizard!</h2>
             <p data-aos="fade-up" data-aos-delay="200">"Emoj-i-on is a web application that you can use to 
-            analayze about the <br>content of your book."</p>
+            analayze about the content of your book."</p>
+			  <br>
+			
+				<a href="login.html">
+<button  type="submit">Let's Get Started</button></a>
+			
           </div>
+			
          
         </div>
       </div>
@@ -242,16 +248,7 @@
 
    
     <!-- Recent-posts Section - Home Page -->
-    <section id="recent-posts" class="recent-posts">
-		
-      <!--  Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Login</h2>
-      </div><!-- End Section Title -->
-
-     <embed src="login.html" style="margin-left: 100px;" width="1080" height="680" type="">
-
-    </section><!-- End Recent-posts Section -->
+   
 
     <!-- Contact Section - Home Page -->
     <section id="contact" class="contact">
