--- a/UI final/login.html
+++ b/UI final/login.html
@@ -27,7 +27,11 @@
                     <input type='text'class='input-field' placeholder='Email Id' required >
 		    <input type='password' class='input-field'placeholder='Enter Password' required>
 		    <input type='checkbox'class='check-box'><span>Remember Password</span>
-		    <button type='submit'class='submit-btn'>Log in</button>
+			<a href="emoji.html"
+			<button type="submit" class="submit-btn"><center>Log in</center></button></a>
+			<br>
+			<center><a href="forgotpassword.html">Forgot password?</a></center>
+						
 		 </form>
 		 <form id='register' class='input-group-register'>
 		     <input type='text'class='input-field'placeholder='First Name' required>
@@ -35,8 +39,9 @@
 		     <input type='email'class='input-field'placeholder='Email Id' required>
 		     <input type='password'class='input-field'placeholder='Enter Password' required>
 		     <input type='password'class='input-field'placeholder='Confirm Password'  required>
-		     <input type='checkbox'class='check-box'><span>I agree to the terms and                                                   conditions</span>
-                    <button type='submit'class='submit-btn'>Register</button>
+		     <input type='checkbox'class='check-box'><p>I agree to the terms and                                                   conditions</p>
+			 
+				 <button type='submit'class='submit-btn'>Register</button>
 	         </form>
             </div>
             </div>
