--- a/UI final/forgotpassword.html
+++ b/UI final/forgotpassword.html
@@ -10,6 +10,28 @@
 	<title>Forgot Password</title>
 </head>
 <body>
+	<div class="top">
+	<header id="header" class="header fixed-top d-flex align-items-center">
+    <div class="container-fluid d-flex align-items-center justify-content-between">
+
+      <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
+		<img src="assets/img/icon.png">
+      </a>
+      <center><h3>Emoj-i-on</h3></center>
+      <!-- Nav Menu -->
+      <nav id="navmenu" class="navmenu">
+        <ul>
+          <li><a href="index.html#hero" >Home</a></li>
+          <li><a href="index.html#about">About</a></li>
+          <li><a href="index.html#team">Team</a></li>
+          <li><a href="index.html#contact">Contact</a></li>
+		  <li><a href="index.html#recent-posts"class="active">Login</a></li>
+        </ul>
+      </nav><!-- End Nav Menu -->
+
+     
+
+    </div>
 	<div class="row">
 		<h1>Forgot Password</h1>
 		<h6 class="information-text">Enter your registered email to reset your password.</h6>
