--- a/UI final/index.html
+++ b/UI final/index.html
@@ -57,8 +57,8 @@
           <li><a href="index.html#hero" class="active">Home</a></li>
           <li><a href="index.html#about">About</a></li>
           <li><a href="index.html#team">Team</a></li>
-          <li><a href="index.html#recent-posts">Login</a></li>
           <li><a href="index.html#contact">Contact</a></li>
+			<li><a href="login.html">Login</a></li>
         </ul>
 
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
