--- a/UI final/index.html
+++ b/UI final/index.html
@@ -10,8 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -61,7 +60,7 @@
 			<li><a href="login.html">Login</a></li>
         </ul>
 
-        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+        <i class="mobile-nav-toggle "></i>
       </nav><!-- End Nav Menu -->
 
      
@@ -86,7 +85,7 @@
 			  <br>
 			
 				<a href="login.html">
-<button  type="submit">Let's Get Started</button></a>
+<button data-aos="fade-up" data-aos-delay="200" type="submit">Let's Get Started</button></a>
 			
           </div>
 			
